--- a/index.html
+++ b/index.html
@@ -1155,9 +1155,9 @@ body::after {
     <a href="#" class="nav-logo">G<span>ı</span>o Everduin</a>
     <div class="nav-right">
       <div class="toggle-wrap">
-        <span class="toggle-label active" id="label-pro" onclick="setMode('pro')">Boardroom</span>
+        <span class="toggle-label active" id="label-pro" onclick="setMode('pro')">Formal</span>
         <div class="toggle-track" id="toggle" onclick="toggleMode()"></div>
-        <span class="toggle-label" id="label-perso" onclick="setMode('perso')">After Hours</span>
+        <span class="toggle-label" id="label-perso" onclick="setMode('perso')">Informal</span>
       </div>
       <button class="hamburger" id="hamburger" onclick="toggleMenu()" aria-label="Menu">
         <span></span>
@@ -1278,7 +1278,7 @@ body::after {
         </div>
         <div class="stats-grid reveal">
           <div class="stat-card">
-            <div class="stat-number">∞</div>
+            <div class="stat-number">10+</div>
             <div class="stat-label">Alter egos & PFPs</div>
           </div>
           <div class="stat-card">
@@ -1290,8 +1290,8 @@ body::after {
             <div class="stat-label">Art collector</div>
           </div>
           <div class="stat-card">
-            <div class="stat-number">3+</div>
-            <div class="stat-label">Web3 communities</div>
+            <div class="stat-number">15</div>
+            <div class="stat-label">Film Festival Awards</div>
           </div>
         </div>
       </div>
@@ -1317,31 +1317,31 @@ body::after {
         <span class="logo-text">Harvard Business School</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=sui.io&sz=64" alt="Sui Foundation">
+        <img src="./images/logo-sui.jpeg" alt="Sui Foundation">
         <span class="logo-text">Sui Foundation</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=plumenetwork.xyz&sz=64" alt="Plume">
+        <img src="./images/logo-plume.png" alt="Plume">
         <span class="logo-text">Plume</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=cbiuae.com&sz=64" alt="CBI">
+        <img src="./images/logo-cbi.jpeg" alt="CBI">
         <span class="logo-text">Commercial Bank International</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=tajikistan.gov.tj&sz=64" alt="Tajikistan Ministry">
+        <img src="./images/logo-tajikistan.jpeg" alt="Tajikistan Ministry">
         <span class="logo-text logo-text-sm">Tajikistan Ministry of Industry & New Technologies</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=zypl.ai&sz=64" alt="Zypl.ai">
+        <img src="./images/logo-zypl.jpeg" alt="Zypl.ai">
         <span class="logo-text">Zypl.ai</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=tumarfund.com&sz=64" alt="Tumar Fund">
+        <img src="./images/logo-tumar.jpeg" alt="Tumar Fund">
         <span class="logo-text">Tumar Fund</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=un.org&sz=64" alt="United Nations">
+        <img src="./images/logo-un.jpeg" alt="United Nations">
         <span class="logo-text">United Nations</span>
       </div>
       <!-- Duplicate for seamless loop -->
@@ -1358,31 +1358,31 @@ body::after {
         <span class="logo-text">Harvard Business School</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=sui.io&sz=64" alt="Sui Foundation">
+        <img src="./images/logo-sui.jpeg" alt="Sui Foundation">
         <span class="logo-text">Sui Foundation</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=plumenetwork.xyz&sz=64" alt="Plume">
+        <img src="./images/logo-plume.png" alt="Plume">
         <span class="logo-text">Plume</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=cbiuae.com&sz=64" alt="CBI">
+        <img src="./images/logo-cbi.jpeg" alt="CBI">
         <span class="logo-text">Commercial Bank International</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=tajikistan.gov.tj&sz=64" alt="Tajikistan Ministry">
+        <img src="./images/logo-tajikistan.jpeg" alt="Tajikistan Ministry">
         <span class="logo-text logo-text-sm">Tajikistan Ministry of Industry & New Technologies</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=zypl.ai&sz=64" alt="Zypl.ai">
+        <img src="./images/logo-zypl.jpeg" alt="Zypl.ai">
         <span class="logo-text">Zypl.ai</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=tumarfund.com&sz=64" alt="Tumar Fund">
+        <img src="./images/logo-tumar.jpeg" alt="Tumar Fund">
         <span class="logo-text">Tumar Fund</span>
       </div>
       <div class="logo-item">
-        <img src="https://www.google.com/s2/favicons?domain=un.org&sz=64" alt="United Nations">
+        <img src="./images/logo-un.jpeg" alt="United Nations">
         <span class="logo-text">United Nations</span>
       </div>
     </div>
