--- a/INDEX.html
+++ b/INDEX.html
@@ -85,7 +85,8 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
 .hero h1{font-family:var(--font-display);font-size:clamp(2.4rem,4.2vw,3.8rem);font-weight:800;line-height:1.05;letter-spacing:-2px;margin-bottom:28px}
 .hero-sub{font-size:1.05rem;color:var(--text2);max-width:520px;line-height:1.7;margin-bottom:32px;transition:color .7s var(--ease)}
 .hero-tags{display:flex;flex-wrap:wrap;gap:10px}
-.tag{font-size:.75rem;font-weight:600;padding:8px 16px;border-radius:20px;background:var(--accent-glow);border:1px solid var(--accent-border);color:var(--accent);letter-spacing:.5px}
+.hero-tags.content-perso{display:grid;grid-template-columns:repeat(3,auto);gap:10px;justify-content:start}
+.tag{font-size:.75rem;font-weight:600;padding:8px 16px;border-radius:20px;background:var(--accent-glow);border:1px solid var(--accent-border);color:var(--accent);letter-spacing:.5px;text-align:center}
 
 /* Hero portrait — layered: faded bg (60%) + crisp cutout (100%) */
 .hero-portrait-wrap{display:flex;justify-content:center;align-items:center;position:relative}
@@ -319,7 +320,8 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
           <span class="tag">Fintech</span><span class="tag">Banking Innovation</span><span class="tag">AI &amp; Web3</span><span class="tag">Digital Assets</span><span class="tag">Tokenization</span><span class="tag">Startup Mentor</span>
         </div>
         <div class="hero-tags content-perso">
-          <span class="tag">Bitcoin Ordinals</span><span class="tag">NFT Collector</span><span class="tag">Hip-Hop</span><span class="tag">Digital Art</span><span class="tag">Film Producer</span><span class="tag">Web3 Degen</span>
+          <span class="tag">Ordinals OG</span><span class="tag">NFT Enjoyoor</span><span class="tag">Sneakerhead</span>
+          <span class="tag">On-chain Art Collector</span><span class="tag">Film Producer</span><span class="tag">Karaoke King</span>
         </div>
       </div>
       <!-- Right: Portrait — cutout only -->
