--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
 .hero-pre{font-family:var(--font-mono);font-size:.8rem;letter-spacing:3px;text-transform:uppercase;color:var(--accent);margin-bottom:24px}
 .hero h1{font-family:var(--font-display);font-size:clamp(2.4rem,4.2vw,3.8rem);font-weight:800;line-height:1.05;letter-spacing:-2px;margin-bottom:28px}
 .hero-sub{font-size:1.05rem;color:var(--text2);max-width:520px;line-height:1.7;margin-bottom:32px;transition:color .7s var(--ease)}
-.hero-tags{display:flex;flex-wrap:wrap;gap:10px}
-.hero-tags.content-perso{display:grid;grid-template-columns:repeat(3,auto);gap:10px;justify-content:start}
-.tag{font-size:.75rem;font-weight:600;padding:8px 16px;border-radius:20px;background:var(--accent-glow);border:1px solid var(--accent-border);color:var(--accent);letter-spacing:.5px;text-align:center}
+.hero-tags{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+.tag{font-size:.75rem;font-weight:600;padding:8px 16px;border-radius:20px;background:var(--accent-glow);border:1px solid var(--accent-border);color:var(--accent);letter-spacing:.5px;text-align:center;white-space:nowrap}
 
 /* Hero portrait — layered: faded bg (60%) + crisp cutout (100%) */
 .hero-portrait-wrap{display:flex;justify-content:center;align-items:center;position:relative}
@@ -317,11 +316,12 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
         <p class="hero-sub content-pro">Chief Strategy &amp; Innovation Officer and Co-founder of CBIx. Harvard Business School alum with 20+ years turning bold ideas into working products across fintech, AI, and digital transformation.</p>
         <p class="hero-sub content-perso">NFT collector, hip-hop head, and art enthusiast navigating multiple identities across web3 communities, Bitcoin Ordinals, and the occasional shisha session. There's always more to the book than the cover.</p>
         <div class="hero-tags content-pro">
-          <span class="tag">Fintech</span><span class="tag">Banking Innovation</span><span class="tag">AI &amp; Web3</span><span class="tag">Digital Assets</span><span class="tag">Tokenization</span><span class="tag">Startup Mentor</span>
+          <span class="tag">Fintech</span><span class="tag">Innovation</span><span class="tag">AI &amp; Crypto</span>
+          <span class="tag">Board Director</span><span class="tag">Start Up Mentor</span><span class="tag">Adviser &amp; VC</span>
         </div>
         <div class="hero-tags content-perso">
           <span class="tag">Ordinals OG</span><span class="tag">NFT Enjoyoor</span><span class="tag">Sneakerhead</span>
-          <span class="tag">On-chain Art Collector</span><span class="tag">Film Producer</span><span class="tag">Karaoke King</span>
+          <span class="tag">Art Collector</span><span class="tag">Film Producer</span><span class="tag">Karaoke King</span>
         </div>
       </div>
       <!-- Right: Portrait — cutout only -->
