--- a/INDEX.html
+++ b/INDEX.html
@@ -93,6 +93,7 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
 body[data-mode="perso"] .hero-portrait-container{box-shadow:none}
 .hero-portrait-bg{display:none}
 .hero-portrait-cutout{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center top;z-index:1;opacity:.4}
+.hero-portrait-pro .hero-portrait-cutout{opacity:.7}
 
 .scroll-hint{position:absolute;bottom:32px;left:50%;transform:translateX(-50%);display:flex;flex-direction:column;align-items:center;gap:8px;opacity:.5}
 .scroll-hint span{font-size:.7rem;letter-spacing:2px;text-transform:uppercase;color:var(--text2)}
