--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ section{padding:100px 0;transition:background .7s var(--ease)}
 .logos-track:hover{animation-play-state:paused}
 .logo-item{display:flex;align-items:center;gap:14px;flex-shrink:0;opacity:.7;transition:opacity .3s}
 .logo-item:hover{opacity:1}
-.logo-item img{width:70px;height:70px;border-radius:12px;object-fit:contain;background:var(--surface);border:1px solid var(--border);padding:8px}
+.logo-item img{width:70px;height:70px;border-radius:12px;object-fit:contain}
 .logo-text{font-size:1.25rem;font-weight:500;color:var(--text2);white-space:nowrap}
 .logo-text-sm{font-size:1.05rem}
 @keyframes marquee{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
@@ -383,7 +383,7 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
   <div class="logos-track-wrapper">
     <div class="logos-track">
       <div class="logo-item"><img src="https://www.google.com/s2/favicons?domain=accenture.com&sz=128" alt="Accenture"><span class="logo-text">Accenture</span></div>
-      <div class="logo-item"><img src="./images/logo-enbd.jpg" alt="Emirates NBD"><span class="logo-text">Emirates NBD</span></div>
+      <div class="logo-item"><img src="./images/logo-enbd.jpeg" alt="Emirates NBD"><span class="logo-text">Emirates NBD</span></div>
       <div class="logo-item"><img src="https://www.google.com/s2/favicons?domain=hbs.edu&sz=128" alt="HBS"><span class="logo-text">Harvard Business School</span></div>
       <div class="logo-item"><img src="./images/logo-sui.jpeg" alt="Sui"><span class="logo-text">Sui Foundation</span></div>
       <div class="logo-item"><img src="./images/logo-plume.png" alt="Plume"><span class="logo-text">Plume</span></div>
@@ -393,7 +393,7 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
       <div class="logo-item"><img src="./images/logo-tumar.jpeg" alt="Tumar"><span class="logo-text">Tumar Fund</span></div>
       <div class="logo-item"><img src="./images/logo-un.jpeg" alt="UN"><span class="logo-text">United Nations</span></div>
       <div class="logo-item"><img src="https://www.google.com/s2/favicons?domain=accenture.com&sz=128" alt="Accenture"><span class="logo-text">Accenture</span></div>
-      <div class="logo-item"><img src="./images/logo-enbd.jpg" alt="Emirates NBD"><span class="logo-text">Emirates NBD</span></div>
+      <div class="logo-item"><img src="./images/logo-enbd.jpeg" alt="Emirates NBD"><span class="logo-text">Emirates NBD</span></div>
       <div class="logo-item"><img src="https://www.google.com/s2/favicons?domain=hbs.edu&sz=128" alt="HBS"><span class="logo-text">Harvard Business School</span></div>
       <div class="logo-item"><img src="./images/logo-sui.jpeg" alt="Sui"><span class="logo-text">Sui Foundation</span></div>
       <div class="logo-item"><img src="./images/logo-plume.png" alt="Plume"><span class="logo-text">Plume</span></div>
