--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ section{padding:100px 0;transition:background .7s var(--ease)}
 .logos-track:hover{animation-play-state:paused}
 .logo-item{display:flex;align-items:center;gap:14px;flex-shrink:0;opacity:.7;transition:opacity .3s}
 .logo-item:hover{opacity:1}
-.logo-item img{width:70px;height:70px;border-radius:12px;object-fit:contain}
+.logo-item img{height:48px;width:auto;max-width:80px;border-radius:8px;object-fit:contain}
 .logo-text{font-size:1.25rem;font-weight:500;color:var(--text2);white-space:nowrap}
 .logo-text-sm{font-size:1.05rem}
 @keyframes marquee{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
