--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
     <ul class="nav-links" id="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#experience">Experience</a></li>
-      <li><a href="#skills">What I Do</a></li>
+      <li class="content-perso"><a href="#skills">What I Do</a></li>
       <li><a href="#media">In The Media</a></li>
       <li><a href="#feed">Latest</a></li>
       <li><a href="#contact">Contact</a></li>
