--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
       <div class="about-grid">
         <div class="about-text reveal">
           <p>By day, Gio runs strategy and innovation for a bank. By night and over weekends, he exists across <strong>multiple identities</strong> in fundamentally different communities — from Bitcoin Ordinals maxis who'd lose it if they knew he works at a bank, to Ethereum collectors, Solana degens, and hip-hop heads.</p>
-          <p>His NFT collection includes <strong>1/1 art pieces</strong> by established artists like Tony Tafuro, Burnt Toast, and Chainszy — each representing a different facet of who he is across the real world, Discord, Telegram, and various SoFi platforms. His alter egos span an OMB, a Doodle, a ZMB, and a Bearmarketeer.</p>
+          <p>His on-chain art collection includes <strong>1/1 art pieces</strong> by artists like Tony Tafuro, No Legs, Scrog and Rupture — each representing a different facet of who he is across the real world, Discord, Telegram, and various SoFi platforms. His alter egos span an OMB, a Doodle, a ZMB, and a Bearmarketeer.</p>
           <p>He also produces <strong>films and documentaries</strong>, has provided creative direction for fashion brands, and once produced an award-winning documentary on women's empowerment called <strong>"SHE"</strong>. Outside of screens, you'll find him reading The Business of Fashion, going down HBR rabbit holes at 5AM, or collecting art that tells stories worth telling.</p>
         </div>
         <div class="stats-grid reveal">
