--- a/INDEX.html
+++ b/INDEX.html
@@ -467,40 +467,52 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
     <p style="color:var(--text2);margin-bottom:40px;max-width:560px;line-height:1.7" class="reveal">Each piece represents a different identity, community, or moment. Collected across chains, displayed without borders.</p>
     <div class="gallery-grid reveal">
       <div class="gallery-item">
-        <img src="./images/nft-omb.jpeg" alt="OMB">
-        <span class="gallery-item-chain">BTC Ordinals</span>
-        <div class="gallery-item-overlay"><span class="gallery-item-title">Ordinal Maxi Biz</span><span class="gallery-item-artist">OMB Collection</span></div>
+        <img src="./images/NFT/Apostles%20by%20No%20Legs.jpeg" alt="Apostles by No Legs">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Apostles by No Legs</span></div>
       </div>
       <div class="gallery-item">
-        <img src="./images/nft-doodle.jpeg" alt="Doodle">
-        <span class="gallery-item-chain">Ethereum</span>
-        <div class="gallery-item-overlay"><span class="gallery-item-title">Doodle #XXXX</span><span class="gallery-item-artist">Burnt Toast</span></div>
+        <img src="./images/NFT/Azuki.jpeg" alt="Azuki">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Azuki</span></div>
       </div>
       <div class="gallery-item">
-        <img src="./images/nft-zmb.jpeg" alt="ZMB">
-        <span class="gallery-item-chain">BTC Ordinals</span>
-        <div class="gallery-item-overlay"><span class="gallery-item-title">Zero Monke Biz</span><span class="gallery-item-artist">ZMB Collection</span></div>
+        <img src="./images/NFT/BagHeads%20by%20Pfffle.jpeg" alt="BagHeads by Pfffle">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">BagHeads by Pfffle</span></div>
       </div>
       <div class="gallery-item">
-        <img src="./images/nft-bearmarketeer.jpeg" alt="Bearmarketeer">
-        <span class="gallery-item-chain">Ethereum</span>
-        <div class="gallery-item-overlay"><span class="gallery-item-title">Bearmarketeer</span><span class="gallery-item-artist">Bearmarketeers</span></div>
+        <img src="./images/NFT/Bored%20Ape%20Yacht%20Club.jpeg" alt="Bored Ape Yacht Club">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Bored Ape Yacht Club</span></div>
       </div>
       <div class="gallery-item">
-        <img src="./images/nft-tafuro.jpeg" alt="Tony Tafuro">
-        <span class="gallery-item-chain">Ethereum</span>
-        <div class="gallery-item-overlay"><span class="gallery-item-title">1/1 Piece</span><span class="gallery-item-artist">Tony Tafuro</span></div>
+        <img src="./images/NFT/Braincells%20by%20Scrog.jpeg" alt="Braincells by Scrog">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Braincells by Scrog</span></div>
       </div>
       <div class="gallery-item">
-        <img src="./images/nft-chainszy.jpeg" alt="Chainszy">
-        <span class="gallery-item-chain">Solana</span>
-        <div class="gallery-item-overlay"><span class="gallery-item-title">1/1 Piece</span><span class="gallery-item-artist">Chainszy</span></div>
+        <img src="./images/NFT/Doodles.jpeg" alt="Doodles">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Doodles</span></div>
       </div>
-      <div class="gallery-placeholder">
-        <span>+ More pieces<br>across chains</span>
+      <div class="gallery-item">
+        <img src="./images/NFT/Hats.jpeg" alt="Hats">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Hats</span></div>
       </div>
-      <div class="gallery-placeholder">
-        <span>View full collection →</span>
+      <div class="gallery-item">
+        <img src="./images/NFT/NodeMonkes.jpeg" alt="NodeMonkes">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">NodeMonkes</span></div>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/NFT/OMB%202.jpeg" alt="OMB 2">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">OMB</span></div>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/NFT/Scripture%20by%20No%20Legs.jpeg" alt="Scripture by No Legs">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Scripture by No Legs</span></div>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/NFT/Solana%20Monkey%20Business.jpeg" alt="Solana Monkey Business">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Solana Monkey Business</span></div>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/NFT/Zero%20Monke%20Biz%20by%20Tony%20Tafuro.jpeg" alt="Zero Monke Biz by Tony Tafuro">
+        <div class="gallery-item-overlay"><span class="gallery-item-title">Zero Monke Biz by Tony Tafuro</span></div>
       </div>
     </div>
   </div>
