--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
 
 <section class="logos-section">
   <div class="logos-track-wrapper">
-    <div class="logos-track">
+    <!-- Formal logos -->
+    <div class="logos-track content-pro">
       <div class="logo-item"><img src="https://www.google.com/s2/favicons?domain=accenture.com&sz=128" alt="Accenture"><span class="logo-text">Accenture</span></div>
       <div class="logo-item"><img src="./images/logo-enbd.jpeg" alt="Emirates NBD"><span class="logo-text">Emirates NBD</span></div>
       <div class="logo-item"><img src="https://www.google.com/s2/favicons?domain=hbs.edu&sz=128" alt="HBS"><span class="logo-text">Harvard Business School</span></div>
@@ -381,6 +382,25 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
       <div class="logo-item"><img src="./images/logo-zypl.jpeg" alt="Zypl"><span class="logo-text">Zypl.ai</span></div>
       <div class="logo-item"><img src="./images/logo-tumar.jpeg" alt="Tumar"><span class="logo-text">Tumar Fund</span></div>
       <div class="logo-item"><img src="./images/logo-un.jpeg" alt="UN"><span class="logo-text">United Nations</span></div>
+    </div>
+    <!-- Informal logos -->
+    <div class="logos-track content-perso">
+      <div class="logo-item"><img src="./images/logo-artsdao.jpeg" alt="ArtsDAO"><span class="logo-text">ArtsDAO</span></div>
+      <div class="logo-item"><img src="./images/logo-monkedao.jpeg" alt="MonkeDAO"><span class="logo-text">MonkeDAO</span></div>
+      <div class="logo-item"><img src="./images/logo-monkeventures.jpeg" alt="Monke Ventures"><span class="logo-text">Monke Ventures</span></div>
+      <div class="logo-item"><img src="./images/logo-theartsclub.jpeg" alt="The Arts Club"><span class="logo-text">The Arts Club</span></div>
+      <div class="logo-item"><img src="./images/logo-zmb.jpeg" alt="ZMB"><span class="logo-text">ZMB</span></div>
+      <div class="logo-item"><img src="./images/logo-omb.jpeg" alt="OMB"><span class="logo-text">OMB</span></div>
+      <div class="logo-item"><img src="./images/logo-rtfkt.jpeg" alt="RTFKT"><span class="logo-text">RTFKT</span></div>
+      <div class="logo-item"><img src="./images/logo-pudgypenguins.jpeg" alt="Pudgy Penguins"><span class="logo-text">Pudgy Penguins</span></div>
+      <div class="logo-item"><img src="./images/logo-artsdao.jpeg" alt="ArtsDAO"><span class="logo-text">ArtsDAO</span></div>
+      <div class="logo-item"><img src="./images/logo-monkedao.jpeg" alt="MonkeDAO"><span class="logo-text">MonkeDAO</span></div>
+      <div class="logo-item"><img src="./images/logo-monkeventures.jpeg" alt="Monke Ventures"><span class="logo-text">Monke Ventures</span></div>
+      <div class="logo-item"><img src="./images/logo-theartsclub.jpeg" alt="The Arts Club"><span class="logo-text">The Arts Club</span></div>
+      <div class="logo-item"><img src="./images/logo-zmb.jpeg" alt="ZMB"><span class="logo-text">ZMB</span></div>
+      <div class="logo-item"><img src="./images/logo-omb.jpeg" alt="OMB"><span class="logo-text">OMB</span></div>
+      <div class="logo-item"><img src="./images/logo-rtfkt.jpeg" alt="RTFKT"><span class="logo-text">RTFKT</span></div>
+      <div class="logo-item"><img src="./images/logo-pudgypenguins.jpeg" alt="Pudgy Penguins"><span class="logo-text">Pudgy Penguins</span></div>
     </div>
   </div>
 </section>
