--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ function buildFeedCard(post) {
   card.className = 'feed-card reveal';
   card.innerHTML = `
     <div class="feed-card-header">
-      <div class="feed-avatar"><img src="${isLI ? './images/avatar-pro.jpeg' : './images/avatar-perso.jpeg'}" alt="${esc(post.author)} avatar"></div>
+      <div class="feed-avatar"><img src="${isLI ? './images/avatar-pro.png' : './images/avatar-perso.jpeg'}" alt="${esc(post.author)} avatar"></div>
       <div class="feed-author-info">
         <span class="feed-author">${esc(post.author)}</span>
         <span class="feed-handle">${esc(handleDisplay)}</span>
