--- a/index.html
+++ b/index.html
@@ -554,6 +554,13 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
   </div>
 </section>
 
+<!-- CRYPTO TICKER (Informal only) -->
+<section class="ticker-section content-perso">
+  <div class="ticker-inner">
+    <div class="ticker-strip" id="ticker-strip"></div>
+  </div>
+</section>
+
 <footer id="contact">
   <div class="container">
     <div class="footer-grid">
